--- a/static/sass/_pattern_strips.scss
+++ b/static/sass/_pattern_strips.scss
@@ -46,6 +46,7 @@
         height: 100%;
         background-repeat: no-repeat;
         background-size: contain;
+        z-index: 0;
       }
 
       &:before {
